force-app/main/default/objects/Receipt_Item__c/Receipt_Item__c.object-meta.xml
<CustomObject>
    <label>Receipt Item</label>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>Receipt Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>