force-app/main/default/objects/Receipt_Item__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receipt Item</relationshipLabel>
    <relationshipName>Receipt_Item</relationshipName>
    <type>Lookup</type>
</CustomField>