force-app/main/default/objects/Receipt_Item__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Receipt__c.Sales_Invoice__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Invoice__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Receipt Items</relationshipLabel>
    <relationshipName>Receipt_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>