force-app/main/default/objects/Receipt_Item__c/fields/Receipt_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Item_Id__c</fullName>
    <displayFormat>ITEM-{0000}</displayFormat>
    <label>Receipt Item Id</label>
    <type>AutoNumber</type>
</CustomField>