force-app/main/default/objects/Receipt_Item__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <label>Sales Invoice</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Customer__c</field>
            <operation>equals</operation>
            <valueField>Sales_Invoice__c.Customer__c</valueField>
        </filterItems>
        <filterItems>
            <field>Sales_Invoice__c.Pending_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Receipt Item</relationshipLabel>
    <relationshipName>Receipt_Item</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>